# mono-ai-budget-bot

./: .env.example  .env.placeholder.bak  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: LICENSE  ci.yml
src/mono_ai_budget_bot/: cli.py  config.py  logging_setup.py
src/mono_ai_budget_bot/analytics/: anomalies.py  categories.py  classify.py  compare.py  compute.py  coverage.py  enrich.py  from_ledger.py  from_monobank.py  models.py  normalization.py  period_report.py  profile.py  profile_store.py  refunds.py  trends.py  whatif.py
src/mono_ai_budget_bot/bot/: __main__.py  accounts_ui.py  app.py  clarify.py  errors.py  formatting.py  handlers.py  handlers_ai_settings.py  handlers_common.py  handlers_dev.py  handlers_menu.py  handlers_menu_categories.py  handlers_menu_data.py  handlers_menu_insights.py  handlers_menu_settings.py  handlers_onboarding.py  handlers_persona.py  handlers_reports.py  handlers_runtime.py  handlers_start.py  handlers_text.py  handlers_uncat.py  menu_flow.py  onboarding_flow.py  renderers.py  scheduler.py  (+11 more)
tests/: conftest.py  test_anomalies.py  test_bot_clarify_keyboard.py  test_categories.py  test_categorization_pipeline.py  test_category_keywords.py  test_compare_to_baseline.py  test_compute_facts_shares.py  test_config_settings_ci.py  test_coverage_model.py  test_coverage_policy.py  test_coverage_sync_callbacks.py  test_coverage_warnings.py  test_currency_cache_policy.py  test_currency_nlq.py  test_enrich_period_facts.py  test_formatting.py  test_insights_output_contracts.py  test_llm_alias_suggestion.py  test_llm_planner_fallback.py  test_llm_planner_safety.py  test_llm_security_contracts.py  test_memory_learned_mappings.py  test_menu_categories_crud.py  test_menu_gating.py  test_monobank_pagination.py  test_nlq_answer_style.py  test_nlq_category_alias_flow.py  test_nlq_deterministic_executor.py  test_nlq_extended_intents.py  test_nlq_income_transfers_executor.py  test_nlq_income_transfers_router.py  test_nlq_llm_handoff.py  test_nlq_llm_router.py  test_nlq_llm_semantic_handoff.py  test_nlq_memory_store.py  test_nlq_periods.py  test_nlq_plain_text_entry.py  test_nlq_resolution.py  test_nlq_router.py  (+38 more)
(+66 files in other folders)
