[tool.poetry]
name = "mono-ai-budget-bot"
version = "0.1.0"
description = "Telegram bot that analyzes Monobank transactions and generates AI-based spending reports."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "mono_ai_budget_bot", from = "src" }]

[tool.poetry.scripts]
monobot = "mono_ai_budget_bot.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.0"
pydantic-settings = "^2.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.3.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"