[tool.poetry]
name = "mono-ai-budget-bot"
version = "0.1.0"
description = "Telegram bot that analyzes Monobank transactions and generates AI-based spending reports."
authors = ["Dmytro Nagornyy (@y3k_notfound)"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nagornyydmytro/mono-ai-budget-bot"
repository = "https://github.com/nagornyydmytro/mono-ai-budget-bot"
keywords = ["telegram", "bot", "monobank", "finance", "analytics", "llm", "openai", "ai"]
packages = [{ include = "mono_ai_budget_bot", from = "src" }]

[tool.poetry.scripts]
monobot = "mono_ai_budget_bot.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.0"
pydantic-settings = "^2.13.1"
tzdata = "^2025.3"
apscheduler = "^3.10.4"
cryptography = "^46.0.5"
openai = "^2.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.3.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"] # line-length контролимо форматером + line-length=100

[tool.ruff.lint.isort]
known-first-party = ["mono_ai_budget_bot"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"